# myrulib

./: AUTHORS  ChangeLog  GNUmakefile  Makefile.in  MyRuLib.bkl  MyRuLib.sln  MyRuLib.workspace  README  aclocal.m4  autoconf_inc.m4  configure  configure.ac  configure.in  make.bat  makefile.gcc  myrulib.bkl  myrulib.workspace  prepare.sh  tarball.sh  ubuntu.sh  version.inc  windows.sh  xcode.sh
Bin2c/: bin2c.c
DBLayer/: DatabaseErrorReporter.cpp  DatabaseLayer.cbp  DatabaseResultSet.cpp  PreparedStatement.cpp  ResultSetMetaData.h  SqliteDatabaseLayer.cpp  SqliteDatabaseLayer.h  SqliteResultSetMetaData.cpp
DataView/: DataView.cbp  DataViewApp.cpp  DataViewMain.cpp  DataViewMain.h  FbBookModel.cpp  FbBookModel.h  FbDataModel.cpp  FbDataModel.h  FbDataView.cpp  FbDataView.h  FbListModel.cpp  FbListModel.h  FbModelData.cpp  FbModelData.h  FbTreeModel.cpp  FbTreeModel.h  GNUmakefile  GUIFrame.cpp  GUIFrame.h  TestApp.cpp  TestApp.h  TestMain.cpp  TestMain.h  dataview.bkl  makefile.gcc
DataView/sample/: DataView.cbp  GNUmakefile  datasamp.cpp  dataview.bkl  mymodels.cpp  mymodels.h
DataView/sources/: datavcmn.cpp  datavgen.cpp  dataview.cpp
DatabaseLayer/: DatabaseErrorCodes.h  DatabaseErrorReporter.cpp  DatabaseErrorReporter.h  DatabaseLayer.cbp  DatabaseLayer.cpp  DatabaseLayer.depend  DatabaseLayer.h  DatabaseLayer.vcproj  DatabaseLayerException.h  DatabaseQueryParser.cpp  DatabaseQueryParser.h  DatabaseResultSet.cpp  DatabaseResultSet.h  DatabaseStringConverter.cpp  DatabaseStringConverter.h  PreparedStatement.cpp  PreparedStatement.h  ResultSetMetaData.h  SqliteDatabaseLayer.cpp  SqliteDatabaseLayer.h  SqlitePreparedStatement.cpp  SqlitePreparedStatement.h  SqliteResultSet.cpp  SqliteResultSet.h  SqliteResultSetMetaData.cpp  SqliteResultSetMetaData.h
Expat/: Expat.cbp  expat_config.h  expat_static.dsp  expat_static.vcproj
Flibusta/: conv_book.php  conv_info.php  conv_new.php  convert.php  download.sh
LibRusEc/: convert.php
Librusec/: convert.php  download.sh  oldfilename.sql
Mingw/: file64.h  file64_mingw.diff
MyRuLib/: AUIDocViewChildFrame.cpp  AUIDocViewChildFrame.h  Archives.cpp  Archives.h  Authors.cpp  Authors.h  BaseThread.cpp  BaseThread.h  BookExtractInfo.cpp  BookExtractInfo.h  BookInfo.cpp  BookInfo.h  BookList.cpp  BookListCtrl.cpp  BookListCtrl.h  Books.cpp  Books.h  BooksPanel.cpp  BooksPanel.h  Bookseq.cpp  Bookseq.h  CommentDlg.fbp  DBCreator.cpp  DBCreator.h  ExpThread.cpp  ExpThread.h  ExternalDlg.cpp  ExternalDlg.fbp  ExternalDlg.h  FbAboutDlg.cpp  FbAboutDlg.h  FbAuthList.cpp  FbAuthList.h  FbAuthorDlg.cpp  FbAuthorDlg.h  FbAuthorList.cpp  FbAuthorList.h  FbAuthorThread.cpp  FbAuthorThread.h  FbBookData.cpp  (+214 more)
MyRuLib/db/: Archives.cpp  Archives.h  Authors.cpp  Authors.h  Books.cpp  Books.h  Bookseq.cpp  Bookseq.h  Files.cpp  Files.h  Params.cpp  Params.h  Sequences.cpp  Sequences.h  Types.cpp  Types.h  ZipBooks.cpp  ZipBooks.h  ZipFiles.cpp  ZipFiles.h  wxActiveRecord.cpp  wxActiveRecord.h
MyRuLib/desktop/: home-32x32.xcf  home-32x32.xpm  library-128x128_1.xcf  library-128x128_2.xcf  library-128x128_3.xcf  myrulib.desktop
MyRuLib/locale/: be.po  be_BY.po  by.po  cs.po  messages_by.po  messages_by.txt  messages_ru.po  messages_ru.txt  messages_ua.po  messages_ua.txt  myrulib.pot  ru.po  sv.po  ua.po  uk.po  uk_UA.po
MyRuLib/polarssl/: config.h
MyRuLib/res/: checked.xpm  checkout.xpm  delete.xpm  dir_down.xpm  ico_pdf.xpm  nocheck.xpm  resource.rc  start.xpm
MyRuLib/sha1/: sha1.c
MyRuLib/wx/: base64.cpp  base64.h  httpbuilder.cpp  httpbuilder.h  httpbuilderthread.cpp  httpbuilderthread.h  httpenginedef.h  treelistctrl.cpp  treelistctrl.h
MyRulib/locale/: messages_by.txt
Presets/: wx.bkl  wx_win32.bkl  wx_xrc.bkl
SQLite/: SQLite.cbp  SQLite.vcproj  convert.php  download.sh  sqlite3.c  sqlite3.h
SQLite3/: SQLite3.cbp  sqlite3.c  sqlite3.h
SQLite3/unicode/: bms.h  bmsearch.h  bytestream.h  calendar.h  coll.h  colldata.h  currpinf.h  datefmt.h  dcfmtsym.h  decimfmt.h  docmain.h  dtfmtsym.h  dtitvfmt.h  dtitvinf.h  dtptngen.h  errorcode.h  gregocal.h  msgfmt.h  numfmt.h  platform.h.in  plurfmt.h  plurrule.h  ppalmos.h  putil.h  pwin32.h  rbbi.h  rbnf.h  regex.h  simpletz.h  smpdtfmt.h  std_string.h  stringpiece.h  tblcoll.h  timezone.h  tmunit.h  tmutamt.h  tmutfmt.h  translit.h  ubidi.h  ubrk.h  (+40 more)
Scripts/Flibusta/: conv_new.php  genres.php
Scripts/LibRusEc/: CreateLib.sh
TestLog/: AUIDocViewApp.cpp  AUIDocViewApp.h  AUIDocViewChildFrame.cpp  AUIDocViewMainFrame.cpp  AUIDocViewMainFrame.h  TestLog.cbp
TreeView/: DataView.cbp  FbAuthList.cpp  FbAuthList.h  FbAuthListModel.cpp  FbAuthListModel.h  FbBookEvent.cpp  FbBookEvent.h  FbCollection.cpp  FbCollection.h  FbDatabase.cpp  FbDatabase.h  FbSearchCtrl.cpp  FbSearchCtrl.h  FbTreeItem.cpp  FbTreeItem.h  FbTreeModel.cpp  FbTreeModel.h  FbTreeView.cpp  FbTreeView.h  GNUmakefile  TestApp.cpp  TestApp.h  TestMain.cpp  TestMain.h  TreeView.cbp  TreeView.sln  TreeView.vcproj  make.bat  makefile.gcc  olddata.h  treeview.bkl
WxSQLite3/: WxSQLite3.cbp  wxsqlite3.cpp
WxSQLite3/wx/: wxsqlite3.h  wxsqlite3def.h  wxsqlite3dyn.h  wxsqlite3opt.h
debian/: README.Debian.ex  changelog  changelog.old  control  copyright  files  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu  myrulib.desktop  myrulib.doc-base.EX  myrulib.substvars  rules
debian/myrulib/: control  rules
debian/myrulib-cr/: control  rules
desktop/: info.plist  myrulib.icns
fedora/: myrulib.spec
rpmbuild/: myrulib-0.28-crengine_lvfntman.patch  myrulib-0.28-crengine_png14.patch  myrulib-cr.spec  myrulib.spec  myrulib.suse.spec
scripts/Common/: database.php  datafile.php  genres.php  strutils.php
scripts/Flibusta/: conv_book.php  conv_full.php  conv_info.php  conv_new.php  download.sh
scripts/GenLib/: CreateGen.sh  conv-gen.php
scripts/LibRusEc/: convert.php  download.sh
scripts/Traum/: cv_traum.php  download.sh
scripts/TraumEpub/: cv_traum.php  download.sh
sources/: MyRuLib.sln  config.h.in  myrulib.sln  myrulib.workspace  version.h.in  version.inc
sources/Bin2c/: bin2c.c
(+399 files in other folders)
