AC_PREREQ(2.53)
AC_INIT([myrulib], [0.23], [mail@lintest.ru])
AC_CONFIG_SRCDIR([MyRuLib/MyRuLibApp.cpp])
AC_CONFIG_SRCDIR([autoconf_inc.m4])
AC_CANONICAL_HOST
DEBUG=0
AC_PROG_CC
AC_PROG_CXX
AC_BAKEFILE_PROG_CC
AC_BAKEFILE_PROG_CXX
AC_BAKEFILE([m4_include(autoconf_inc.m4)])
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
